<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_weight="0.2"
        android:textSize="18pt"
        android:textAlignment="center"
        android:backgroundTint="@color/purple_200"
        android:id="@+id/input_text"
        android:textColor="@color/purple_700"
        ></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:textSize="12pt"
        android:textAlignment="center"
        android:id="@+id/text_out"
        android:textColor="@color/purple_500"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_M"
            android:text="@string/button_M"
            android:gravity="center"
            android:layout_marginStart="200px"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/white"
            ></Button>

        <Button
            android:id="@+id/button_K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="200px"
            android:backgroundTint="@color/light_pink"
            android:textColor="@color/white"
            android:text="@string/button_K"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_C"
            android:text="@string/button_C"
            android:gravity="center"
            android:backgroundTint="@color/teal"
            android:textColor="@color/white"
            android:layout_marginStart="50px"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_D"
            android:layout_marginStart="100px"
            android:text="@string/button_D"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:gravity="center"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_T"
            android:layout_marginStart="100px"
            android:text="@string/button_T"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/white"
            android:gravity="center"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0
"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_1"
            android:text="@string/player_1"
            android:gravity="center"
            android:backgroundTint="@color/player_1"
            android:textColor="@color/white"
            android:layout_marginStart="30px"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_2"
            android:layout_marginStart="100px"
            android:text="@string/player_2"
            android:backgroundTint="@color/player_2"
            android:textColor="@color/white"
            android:gravity="center"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_3"
            android:layout_marginStart="100px"
            android:text="@string/player_3"
            android:backgroundTint="@color/player_3"
            android:textColor="@color/white"
            android:gravity="center"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_4"
            android:text="@string/player_4"
            android:gravity="center"
            android:backgroundTint="@color/player_4"
            android:textColor="@color/white"
            android:layout_marginStart="30px"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_5"
            android:layout_marginStart="100px"
            android:text="@string/player_5"
            android:backgroundTint="@color/player_5"
            android:textColor="@color/white"
            android:gravity="center"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_6"
            android:layout_marginStart="100px"
            android:text="@string/player_6"
            android:backgroundTint="@color/player_6"
            android:textColor="@color/white"
            android:gravity="center"
            ></Button>
    </LinearLayout>

</LinearLayout>